<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_sync" android:title="@string/action_sync"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_login" android:title="@string/action_login"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_add_channel" android:title="@string/action_add_channel"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_playlist_picker" android:title="@string/action_playlist_picker"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
