<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#4d5052"
    tools:context="com.booshaday.spotirius.WelcomeActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mePic"
        android:src="@drawable/ic_launcher"
        android:scaleType="fitCenter"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        app:riv_corner_radius="30dip"
        app:riv_border_width="2dip"
        app:riv_border_color="#333333"
        app:riv_mutate_background="true"
        app:riv_tile_mode="repeat"
        app:riv_oval="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:textColor="#ffffff"
        android:id="@+id/meText"
        android:visibility="invisible"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:layout_alignTop="@+id/mePic"
        android:layout_toRightOf="@+id/mePic"
        android:layout_toEndOf="@+id/mePic" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Medium Text"
        android:textColor="#ffffff"
        android:visibility="invisible"
        android:id="@+id/status"
        android:layout_marginLeft="12dp"
        android:layout_below="@+id/meText"
        android:layout_toRightOf="@+id/mePic"
        android:layout_toEndOf="@+id/mePic" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/main_scrollview"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/mePic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sync_now"
                android:id="@+id/button_sync_now" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_strict"
                android:textColor="#ffffff"
                android:id="@+id/checkbox_strict" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:text="@string/sync_now_desc"
                android:layout_marginBottom="12dp"
                android:id="@+id/sync_now_desc" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/manage_channels"
                android:id="@+id/button_manage_channels" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:text="@string/manage_channels_desc"
                android:layout_marginBottom="12dp"
                android:id="@+id/textView3" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:id="@+id/button_log_out" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:text="@string/log_out_desc"
                android:layout_marginBottom="12dp"
                android:id="@+id/textView4" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
